tests/api_misuse/register_impl_for_inferred.stderr
error: custom attribute panicked
 --> tests/api_misuse/register_impl_for_inferred.rs:7:1
  |
7 | #[traitreg::register]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Cannot register implementation on an inferred type (_), expected a struct, enum, union or type alias.
