tests/api_misuse/register_impl_for_inferred.rs
fn main() {}



trait MyTrait {}

#[traitreg::register]
impl MyTrait for _ {}
